instantiate runners in the GUI thread

This should finally provide a workaround for QTBUG-15004.
Networked plugins seem to work on the desktop under Qt 4.8.4, under Harmattan with Qt 4.7.4(?) and on Maemo 5 with the buggy Qt 4.7.0.

BUG: 257376
(cherry picked from commit 54dbcdd91f9d8b811aef857adfa222d3c7979b13)